--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     <div class="text-center">
                         <h4 class="text-xl font-bold text-[#00234C] mb-2">ملف الشركة (البروفايل)</h4>
                         <p class="text-gray-600 mb-4">المزيج: واقعية (Realism) + تصميم مسطح (Flat) + تصميم متساوي القياس (Isometric).</p>
-                        <img src="https://i.postimg.cc/sMLPv6QS/image5.png" alt="نموذج بصري لملف الشركة" class="rounded-lg shadow-md mx-auto max-w-3xl w-full" onerror="this.onerror=null;this.src='https://placehold.co/800x1000/FFFFFF/000000?text=Image+Not+Found';">
+                        <img src="4-26a8fe84.jpg" alt="نموذج بصري لملف الشركة" class="rounded-lg shadow-md mx-auto max-w-3xl w-full" onerror="this.onerror=null;this.src='https://placehold.co/800x1000/FFFFFF/000000?text=Image+Not+Found';">
                     </div>
 
                 </div>
