--- a/index.html
+++ b/index.html
@@ -285,25 +285,25 @@
                     <div class="text-center">
                         <h4 class="text-xl font-bold text-[#00234C] mb-2">الصورة الواحدة</h4>
                         <p class="text-gray-600 mb-4">الأساس: واقعية (Realism) مع نصوص بارزة وواضحة.</p>
-                        <img src="https://i.postimg.cc/bZRcPnsK/image1.png" alt="نموذج بصري للصورة الواحدة" class="rounded-lg shadow-md mx-auto max-w-sm w-full" onerror="this.onerror=null;this.src='https://placehold.co/600x800/FFFFFF/000000?text=Image+Not+Found';">
+                        <img src="1-26a8fe84.jpg" alt="نموذج بصري للصورة الواحدة" class="rounded-lg shadow-md mx-auto max-w-sm w-full" onerror="this.onerror=null;this.src='https://placehold.co/600x800/FFFFFF/000000?text=Image+Not+Found';">
                     </div>
 
                     <div class="text-center">
                         <h4 class="text-xl font-bold text-[#00234C] mb-2">الإنفوجراف</h4>
                         <p class="text-gray-600 mb-4">المزيج: واقعية (Realism) + تصميم مسطح (Flat) + تصميم متساوي القياس (Isometric).</p>
-                        <img src="https://i.postimg.cc/dZCpxkbN/image2.png" alt="نموذج بصري للإنفوجراف" class="rounded-lg shadow-md mx-auto max-w-3xl w-full" onerror="this.onerror=null;this.src='https://placehold.co/800x600/EEEEEE/333333?text=Image+Not+Found';">
+                        <img src="2-26a8fe84.jpg" alt="نموذج بصري للإنفوجراف" class="rounded-lg shadow-md mx-auto max-w-3xl w-full" onerror="this.onerror=null;this.src='https://placehold.co/800x600/EEEEEE/333333?text=Image+Not+Found';">
                     </div>
 
                     <div class="text-center">
                         <h4 class="text-xl font-bold text-[#00234C] mb-2">الصورة مع تفاصيل</h4>
                         <p class="text-gray-600 mb-4">المزيج: واقعية (Realism) + تصميم مسطح (Flat).</p>
-                        <img src="https://i.postimg.cc/c6tpH2v7/image3.png" alt="نموذج بصري لصورة مع تفاصيل" class="rounded-lg shadow-md mx-auto max-w-sm w-full" onerror="this.onerror=null;this.src='https.placehold.co/600x800/FFFFFF/111111?text=Image+Not+Found';">
+                        <img src="3-26a8fe84.jpg" alt="نموذج بصري لصورة مع تفاصيل" class="rounded-lg shadow-md mx-auto max-w-sm w-full" onerror="this.onerror=null;this.src='https.placehold.co/600x800/FFFFFF/111111?text=Image+Not+Found';">
                     </div>
 
                     <div class="text-center">
                         <h4 class="text-xl font-bold text-[#00234C] mb-2">الكاروسيل</h4>
                         <p class="text-gray-600 mb-4">المزيج: واقعية (Realism) + تصميم متساوي القياس (Isometric) + تصميم مسطح (Flat).</p>
-                        <img src="https://i.postimg.cc/mzJKjN5F/image4.png" alt="نموذج بصري للكاروسيل" class="rounded-lg shadow-md mx-auto max-w-3xl w-full" onerror="this.onerror=null;this.src='https://placehold.co/800x400/DDDDDD/222222?text=Image+Not+Found';">
+                        <img src="1-f870ad16.jpg" alt="نموذج بصري للكاروسيل" class="rounded-lg shadow-md mx-auto max-w-3xl w-full" onerror="this.onerror=null;this.src='https://placehold.co/800x400/DDDDDD/222222?text=Image+Not+Found';">
                     </div>
 
                     <div class="text-center">
