--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <div id="logo" class="visual-content active">
                     <div class="grid md:grid-cols-2 gap-8 items-center">
                         <div class="text-center">
-                             <img src="https://placehold.co/192x192/00234C/FFFFFF?text=Logo" alt="شعار أكاديمية النخبة الدولية" class="rounded-lg shadow-md mx-auto">
+                             <img src="[removal.ai]_1f0df49e-b0a9-44b2-b02d-bc01e97504fa-logo.png" alt="شعار أكاديمية النخبة الدولية" class="rounded-lg shadow-md mx-auto">
                         </div>
                         <div>
                             <h3 class="text-2xl font-bold text-[#00234C] mb-4">رمزية الشعار</h3>
