--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             --pearl-white: #f7f4ee;
             --black: #1a1a1a; /* Softer black */
             --navi-blue: #080b3b;
+            --navi-blue: #080b3b;
             --dark-red: #660d0d;
             --neutral-gray: #5a5a5a; /* Darker gray for better contrast */
         }
@@ -190,17 +191,7 @@
                                     <span class="font-bold">• 10% (الأحمر الداكن):</span> يستخدم كلمسة استراتيجية للأزرار الهامة ولفت الانتباه وتحفيز المستخدم.</p>
                             </div>
                         </div>
-                        <div>
-                            <h3 class="text-2xl font-bold text-[var(--navi-blue)] mb-4 text-center">مثال عملي: منشور إعلاني</h3>
-                            <div class="rounded-xl shadow-2xl w-full max-w-md mx-auto transform transition-transform hover:scale-105 overflow-hidden" style="background-color: var(--pearl-white);">
-                                <div class="bg-[var(--navi-blue)] text-white p-6 text-center rounded-t-xl">
-                                    <h4 class="text-2xl font-extrabold">ابدأ رحلتك نحو التميز</h4>
-                                    <p class="opacity-80 mt-1">انضم إلى دورتنا التدريبية الجديدة</p>
-                                </div>
-                                <div class="p-6">
-                                   <p class="text-center text-[var(--neutral-gray)] mb-4">"نحن هنا لنرشدك في كل خطوة نحو تحقيق أهدافك المهنية."</p>
-                                   <button class="w-full text-white font-bold py-3 px-4 rounded-lg transition-transform hover:scale-105 shadow-lg hover:shadow-xl" style="background-color: var(--dark-red);">سجل الآن</button>
-                                </div>
+                        
                             </div>
                         </div>
                     </div>
