--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </div>
 
                 <div id="logo" class="visual-content active p-4">
-                    <div class="grid md:grid-cols-2 gap-8 items-center"><div class="text-center"><img src="/[removal.ai]_1f0df49e-b0a9-44b2-b02d-bc01e97504fa-logo.png" alt="شعار أكاديمية النخبة الدولية" class="max-w-[250px] w-full mx-auto"></div><div><h3 class="text-2xl font-bold text-[var(--navi-blue)] mb-4">رمزية الشعار</h3><p class="text-[var(--neutral-gray)] leading-relaxed">هنا يتم وضع شرح لرمزية الشعار وأجزائه المختلفة. التصميم العصري والراقي يميزنا عن المنافسين التقليديين ويضعنا في مصاف العلامات التجارية المبتكرة.</p></div></div>
+                    <div class="grid md:grid-cols-2 gap-8 items-center"><div class="text-center"><img src="[removal.ai]_1f0df49e-b0a9-44b2-b02d-bc01e97504fa-logo.png" alt="شعار أكاديمية النخبة الدولية" class="max-w-[250px] w-full mx-auto"></div><div><h3 class="text-2xl font-bold text-[var(--navi-blue)] mb-4">رمزية الشعار</h3><p class="text-[var(--neutral-gray)] leading-relaxed">هنا يتم وضع شرح لرمزية الشعار وأجزائه المختلفة. التصميم العصري والراقي يميزنا عن المنافسين التقليديين ويضعنا في مصاف العلامات التجارية المبتكرة.</p></div></div>
                 </div>
 
                 <div id="colors" class="visual-content p-4">
