--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                 <h2 class="text-3xl md:text-4xl font-extrabold text-[var(--black)] mb-3">الجوهر الاستراتيجي: هويتنا الأساسية</h2>
                 <p class="text-lg text-[var(--neutral-gray)] max-w-3xl mx-auto">هنا يكمن أساس علامتنا التجارية. كل قرار، وكل تصميم، وكل كلمة تنبع من هذه الركائز الأساسية التي تحدد من نحن وماذا نسعى لتحقيقه.</p>
             </div>
-            <div class="grid md:grid-cols-2 gap-6 md:gap-8 mb-12">
-                <!-- === Updated "Why We Are Here" Section === -->
+            <!-- === Updated Layout: Purpose and Vision now stack vertically === -->
+            <div class="grid grid-cols-1 gap-8 mb-12">
                 <div class="card p-6 md:p-8 space-y-4">
                     <h3 class="text-2xl font-bold text-[var(--black)]">غرضنا: لماذا نحن هنا؟</h3>
                     <div class="text-[var(--neutral-gray)] leading-relaxed space-y-4">
@@ -155,9 +155,9 @@
                         </ul>
                     </div>
                 </div>
-                <!-- === End of Updated Section === -->
                 <div class="card p-6 md:p-8 space-y-4"><h3 class="text-2xl font-bold text-[var(--black)]">رؤيتنا: المستقبل الذي نصنعوه</h3><p class="text-[var(--neutral-gray)] leading-relaxed">أن نكون المعهد الدولي الرائد والمعتمد في المملكة العربية السعودية، وأن نتوسع لنؤسس مقرات لنا في دولتين إلى ثلاث دول مستهدفة، لنصبح منارة التميز المهني في المنطقة والعالم.</p></div>
             </div>
+            <!-- === End of Updated Layout === -->
             <div class="mb-12"><h3 class="text-2xl font-bold text-center text-[var(--black)] mb-8">قيمنا: المبادئ التي توجهنا</h3><div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-5"><div class="card p-6 text-center"><h4 class="font-bold text-lg text-[var(--black)]">التميز</h4><p class="text-sm text-[var(--neutral-gray)] mt-2">التزام مطلق بتقديم أعلى معايير الجودة.</p></div><div class="card p-6 text-center"><h4 class="font-bold text-lg text-[var(--black)]">النزاهة والشفافية</h4><p class="text-sm text-[var(--neutral-gray)] mt-2">نتعامل بوضوح ومصداقية تامة.</p></div><div class="card p-6 text-center"><h4 class="font-bold text-lg text-[var(--black)]">الخصوصية</h4><p class="text-sm text-[var(--neutral-gray)] mt-2">نحترم ونحمي بياناتكم بأعلى درجات الأمان.</p></div><div class="card p-6 text-center"><h4 class="font-bold text-lg text-[var(--black)]">الابتكار</h4><p class="text-sm text-[var(--neutral-gray)] mt-2">نبحث باستمرار عن أفضل الأساليب والتقنيات.</p></div><div class="card p-6 text-center"><h4 class="font-bold text-lg text-[var(--black)]">البهجة</h4><p class="text-sm text-[var(--neutral-gray)] mt-2">نؤمن بأن رحلة التعلم يجب أن تكون ممتعة.</p></div></div></div>
             <div class="card p-6 md:p-8"><h3 class="text-2xl font-bold text-center text-[var(--black)] mb-6">شخصية ونبرة العلامة التجارية</h3><div class="grid md:grid-cols-2 gap-8"><div><h4 class="text-xl font-bold text-[var(--black)] mb-3">شخصيتنا: المرشد الخبير</h4><p class="text-[var(--neutral-gray)] leading-relaxed">نحن نجمع بين حكمة الخبير ودعم المرشد. نمتلك المعرفة العميقة والسلطة في مجالنا، لكننا نقدمها بطريقة ودودة وداعمة. هدفنا ليس فقط تزويدك بالمعلومات، بل إرشادك وتمكينك لتحقيق النجاح.</p></div><div><h4 class="text-xl font-bold text-[var(--black)] mb-3">نبرة صوتنا: واثقة، ملهمة، وواضحة</h4><p class="text-[var(--neutral-gray)] mb-4 leading-relaxed">نتحدث بلغة تجمع بين الاحترافية والبساطة، ونبرة تمزج بين الثقة والإلهام.</p><ul class="space-y-3 text-sm"><li class="flex items-start"><span class="text-green-500 mr-2 mt-1">✔</span> <strong>نقول:</strong> "نحن هنا لنرشدك في كل خطوة نحو تحقيق أهدافك المهنية."</li><li class="flex items-start"><span class="text-red-500 mr-2 mt-1">✖</span> <strong>لا نقول:</strong> "هذه هي الدورة التي يجب أن تأخذها."</li></ul></div></div></div>
         </section>
